--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -6,3 +6,9 @@
     padding: 6rem;
     min-height: 100vh;
 }
+
+.table {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
